--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -39,7 +39,7 @@
 				<button class="ghost" id="signIn">Sign In</button>
 			</div>
 			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
+				<h1>FIBA Login Coming Soon</h1>
 				<p>Enter Sign Up details and start journey with FIBA</p>
 				<button class="ghost" id="signUp">Sign Up</button>
 			</div>
