--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,7 @@
 @import '~ngx-toastr/toastr';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+textarea{
+    padding: 0.5rem;
+    outline: none;
+  }
