copyright text commit!

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,6 @@
     <footer>
         <div class="">
-            <p class="copyright">Made with ❤️ by <span><a  href="https://github.com/itarungm" target="_blank">iTarunGM</a></span>.</p>
+            <p class="copyright">Made with ❤️ by <span><a  href="https://github.com/itarungm" target="_blank">iTarunGM</a></span>. © 2021 - https://file-to-base64.web.app/ - All Rights Reserved</p>
+           
         </div>
     </footer>
